fixing figure spacing issue

--- a/mobi/mobi.css
+++ b/mobi/mobi.css
@@ -427,8 +427,9 @@ td pre.programlisting, td pre.screen, td pre.literallayout, td code { /* allow c
 /* ---------------------- figures ---------------------- */
 
 div.figure { /* figure containers */
-  margin: 30px 0px;
-  padding: 0 40px 0 0;
+  text-indent: 0;
+  margin: 0;
+  padding: 0;
   border-top: 1px solid #888;
   border-bottom: 1px solid #888;
   /*both of these elements are to avoid page breaks inside*/
